--- a/style.css
+++ b/style.css
@@ -18,3 +18,21 @@ li a {
     font-weight: 600;
     margin-top: 3px;
     margin-right: 12px;
+}
+img {
+    width: 300px;
+    margin: 200px auto 0 auto;
+    display: block;
+}
+#sign {
+  border: 3px solid #006ADA;
+    background-color: #006ADA;
+    font-size: 11px;
+    font-family: arial;
+    height: 18px;
+    width: 70px;
+    float: right;
+    margin-right: 40px;
+    margin-top: 20px;
+    border-radius: 1px;
+	}
